<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/title_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/enter_to_do" />

    <EditText
        android:id="@+id/todo_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:hint="@string/enter_to_do"
        android:paddingTop="15dp"
        android:textSize="15sp"
        android:paddingBottom="15dp"
        android:layout_below="@id/title_todo"
        android:layout_marginTop="20dp" />
    
    <RadioGroup 
        android:id="@+id/priorityGroup"
        android:layout_below="@id/todo_details"
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        
        >
        <RadioButton 
            android:id="@+id/priorityHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_high"       
            />
        
        <RadioButton 
            android:id="@+id/priorityMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_medium"       
            />
        <RadioButton 
            android:id="@+id/priorityLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low"       
            />
        
    </RadioGroup>

    <Button
        android:id="@+id/save_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/savetodo" />

    
</RelativeLayout>